Major update. Changes to interlingua. Upgraded minigrid environment and model. New approach to task management that supports parallel task-set activation.